# WorkShadow

./: .gitignore  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: index.html  llms.txt  robots.txt
scripts/: find-dead-i18n.mjs  prune-i18n.mjs  prune-styles.mjs  setup-protoc.ps1
src/: App.tsx  LogWindowApp.tsx  defaults.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: data_bundle.rs  device.rs  main.rs  rag.rs  single_instance.rs
src-tauri/tools/: protoc-wrapper.cmd
src/components/: DataSettingsPanel.tsx  DesktopTitleBar.tsx  EditorPane.tsx  EmbeddingModelFields.tsx  ErrorReportingSurface.tsx  HoverTip.tsx  LogTree.tsx  PromptDialog.tsx  SettingsPanel.tsx  SettingsSelect.tsx  TextContextMenu.tsx  WorkspaceDrawer.tsx  WorkspaceMarkdown.tsx
src/config/: edition.ts
src/extensions/: editorClipboard.ts  highlightColor.ts  imageCaption.ts  tableCellVertical.test.ts  tableCellVertical.ts
src/i18n/: index.ts
src/services/: ai.test.ts  ai.ts  appLogger.ts  chatCompletionParse.test.ts  chatCompletionParse.ts  chatCompletionStream.ts  dataBundle.ts  dateTime.ts  editorHistory.ts  embeddingConfig.test.ts  embeddingConfig.ts  errorReporting.ts  insightsReports.ts  logWindow.ts  logWindowSync.ts  markdown.export.test.ts  markdown.ts  modelProfiles.test.ts  modelProfiles.ts  modelProviders.ts  modelTest.test.ts  modelTest.ts  openExternalUrl.ts  productionUiGuards.test.ts  productionUiGuards.ts  rag.test.ts  rag.ts  saveMarkdownFile.ts  storage.ts  systemClipboard.ts  textContextMenu.ts  tree.test.ts  tree.ts  windowDragPerf.ts  workshadowPrompt.test.ts  workshadowPrompt.ts  workspaceMarkdown.test.ts  workspaceMarkdown.ts
